Milty Draft Framework