@@ -18,27 +18,23 @@ import javax.imageio.IIOImage;
 import javax.imageio.ImageIO;
 import javax.imageio.ImageWriteParam;
 import javax.imageio.ImageWriter;
+
 import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
-import net.dv8tion.jda.api.entities.emoji.Emoji;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
 import net.dv8tion.jda.api.interactions.commands.build.OptionData;
-import net.dv8tion.jda.api.interactions.components.ActionRow;
-import net.dv8tion.jda.api.interactions.components.buttons.Button;
 import net.dv8tion.jda.api.utils.FileUpload;
-import net.dv8tion.jda.api.utils.messages.MessageCreateBuilder;
+
 import ti4.ResourceHelper;
 import ti4.generator.Mapper;
 import ti4.generator.TileHelper;
 import ti4.helpers.Constants;
-import ti4.helpers.Emojis;
 import ti4.helpers.ImageHelper;
 import ti4.helpers.Storage;
 import ti4.map.Game;
 import ti4.map.MapFileDeleter;
 import ti4.map.Planet;
-import ti4.map.Player;
 import ti4.map.Tile;
 import ti4.map.UnitHolder;
 import ti4.message.BotLogger;
@@ -63,11 +59,10 @@ public class StartMilty extends MiltySubcommandData {
     public void execute(SlashCommandInteractionEvent event) {
         Game activeGame = getActiveGame();
 
-        if (!activeGame.isTestBetaFeaturesMode()) {
-            MessageHelper.sendMessageToChannel(event.getChannel(),
-                    "Milty Draft in this bot is incomplete.\nEnable access by running `/game setup beta_test_mode: true`\nMost folks use [this website](https://milty.shenanigans.be/) to do the Milty Draft and import the TTPG string with `/map add_tile_list`");
-            return;
-        }
+        // if (!activeGame.isTestBetaFeaturesMode()) {
+        //     MessageHelper.sendMessageToChannel(event.getChannel(), "Milty Draft in this bot is incomplete.\nEnable access by running `/game setup beta_test_mode: true`\nMost folks use [this website](https://milty.shenanigans.be/) to do the Milty Draft and import the TTPG string with `/map add_tile_list`");
+        //     return;
+        // }
 
         OptionMapping sliceOption = event.getOption(Constants.SLICE_COUNT);
         int sliceCount = activeGame.getPlayerCountForMap() + 2;
@@ -97,139 +92,41 @@ public class StartMilty extends MiltySubcommandData {
         }
 
         MiltyDraftManager draftManager = activeGame.getMiltyDraftManager();
+        draftManager.init();
+
         draftManager.setFactionDraft(factionDraft);
-        draftManager.clear();
-        initDraftTiles(draftManager);
         initDraftOrder(draftManager, activeGame);
 
         boolean slicesCreated = generateSlices(sliceCount, draftManager);
         if (!slicesCreated) {
             MessageHelper.sendMessageToChannel(event.getChannel(), "Did not find correct slices, check settings");
         } else {
-            FileUpload fileUpload = generateImage(draftManager);
-            MessageHelper.sendFileUploadToChannel(event.getChannel(), fileUpload);
-
-            String message = "Slices:\n\n";
-            MessageCreateBuilder baseMessageObject = new MessageCreateBuilder().addContent(message);
-            List<ActionRow> actionRow = null;
-            List<Button> sliceButtons = new ArrayList<>(getMiltySliceButtons(activeGame));
-            if (!sliceButtons.isEmpty())
-                actionRow = makeActionRows(sliceButtons);
-            if (actionRow != null)
-                baseMessageObject.addComponents(actionRow);
-
             MessageChannel eventChannel = event.getChannel();
-            MessageChannel mainGameChannel = activeGame.getMainGameChannel() == null ? eventChannel
-                    : activeGame.getMainGameChannel();
-            mainGameChannel.sendMessage(baseMessageObject.build()).queue();
+            MessageChannel mainGameChannel = activeGame.getMainGameChannel() == null ? eventChannel : activeGame.getMainGameChannel();
+            FileUpload fileUpload = generateImage(draftManager);
+            MessageHelper.sendFileUploadToChannel(mainGameChannel, fileUpload, true);
 
-            message = "Factions:\n\n";
-            baseMessageObject = new MessageCreateBuilder().addContent(message);
-            List<Button> factionButtons = new ArrayList<>(getMiltyFactionButtons(activeGame));
-            if (!factionButtons.isEmpty())
-                actionRow = makeActionRows(factionButtons);
-            if (actionRow != null)
-                baseMessageObject.addComponents(actionRow);
-            mainGameChannel.sendMessage(baseMessageObject.build()).queue();
-
-            message = "Order:\n\n";
-            baseMessageObject = new MessageCreateBuilder().addContent(message);
-            List<Button> orderButtons = new ArrayList<>(getMiltyOrderButtons(activeGame));
-            if (!orderButtons.isEmpty())
-                actionRow = makeActionRows(orderButtons);
-            if (actionRow != null)
-                baseMessageObject.addComponents(actionRow);
-            mainGameChannel.sendMessage(baseMessageObject.build()).queue();
-
-            message = "\n\nDraftOrder:\n\n";
-            StringBuilder draftOrder = new StringBuilder();
-            List<Player> draftRandomOrder = draftManager.getDraftRandomOrder();
-            for (int index = 0; index < draftRandomOrder.size(); index++) {
-                Player player = draftRandomOrder.get(index);
-                // String playerPing = Helper.getPlayerPing(player);
-                String userName = player.getUserName();
-                draftOrder.append(index + 1).append(". ").append(userName).append("\n");
-            }
-
-            message += draftOrder.toString();
-            baseMessageObject = new MessageCreateBuilder().addContent(message);
-            mainGameChannel.sendMessage(baseMessageObject.build()).queue();
-
-            // String playerPing = Helper.getPlayerPing(draftManager.getDraftOrderPlayer());
-            mainGameChannel.sendMessage(draftManager.getDraftOrderPlayer().getUserName() + " is up!").queue();
-
+            // Kick it off with a bang!
+            draftManager.serveCurrentPlayer(activeGame);
         }
     }
 
-    private void initDraftOrder(MiltyDraftManager draftManager, Game activeGame) {
-        List<Player> players = activeGame.getPlayers().values().stream().filter(Player::isRealPlayer)
-                .collect(Collectors.toList());
-        Collections.shuffle(players);
+    private static void initDraftOrder(MiltyDraftManager draftManager, Game activeGame) {
+        List<String> players = new ArrayList<>(activeGame.getPlayers().values().stream().map(p -> p.getUserID()).toList());
         Collections.shuffle(players);
 
-        List<Player> playersReversed = new ArrayList<>(players);
+        List<String> playersReversed = new ArrayList<>(players);
         Collections.reverse(playersReversed);
 
-        List<Player> draftOrder = new ArrayList<>(players);
+        List<String> draftOrder = new ArrayList<>(players);
         draftOrder.addAll(playersReversed);
         draftOrder.addAll(players);
 
         draftManager.setDraftOrder(draftOrder);
-        draftManager.setDraftRandomOrder(players);
+        draftManager.setPlayers(players);
     }
 
-    private List<ActionRow> makeActionRows(List<Button> buttons) {
-        List<ActionRow> actionRow = new ArrayList<>();
-        List<Button> tempActionRow = new ArrayList<>();
-        int index = 0;
-        for (Button button : buttons) {
-            if (index > 4) {
-                actionRow.add(ActionRow.of(tempActionRow));
-                tempActionRow = new ArrayList<>();
-                index = 0;
-            }
-            tempActionRow.add(button);
-            index++;
-        }
-        actionRow.add(ActionRow.of(tempActionRow));
-        return actionRow;
-    }
-
-    private List<Button> getMiltySliceButtons(Game activeGame) {
-        MiltyDraftManager miltyDraftManager = activeGame.getMiltyDraftManager();
-        List<Button> sliceButtons = new ArrayList<>();
-        for (MiltyDraftSlice slice : miltyDraftManager.getSlices()) {
-            Button sliceButton = Button.success("milty_slice_" + slice.getName(), "Slice No.: " + slice.getName());
-            sliceButtons.add(sliceButton);
-        }
-        return sliceButtons;
-    }
-
-    private List<Button> getMiltyOrderButtons(Game activeGame) {
-        List<Button> orderButtons = new ArrayList<>();
-        for (int i = 0; i < activeGame.getPlayerCountForMap(); i++) {
-            int order = i + 1;
-            Button sliceButton = Button.success("milty_order_" + order, "Order No.: " + order);
-            orderButtons.add(sliceButton);
-        }
-        return orderButtons;
-    }
-
-    private List<net.dv8tion.jda.api.interactions.components.buttons.Button> getMiltyFactionButtons(Game activeGame) {
-        List<net.dv8tion.jda.api.interactions.components.buttons.Button> factionChoose = new ArrayList<>();
-        for (String faction : activeGame.getMiltyDraftManager().getFactionDraft()) {
-            if (faction != null && Mapper.isValidFaction(faction)) {
-                net.dv8tion.jda.api.interactions.components.buttons.Button button = Button
-                        .secondary("milty_faction_" + faction, " ");
-                String factionEmojiString = Emojis.getFactionIconFromDiscord(faction);
-                button = button.withEmoji(Emoji.fromFormatted(factionEmojiString));
-                factionChoose.add(button);
-            }
-        }
-        return factionChoose;
-    }
-
-    private List<String> createFactionDraft(int factionCount, List<String> factions) {
+    private static List<String> createFactionDraft(int factionCount, List<String> factions) {
         factions.remove("lazax");
         Collections.shuffle(factions);
         List<String> factionDraft = new ArrayList<>();
@@ -249,7 +146,7 @@ public class StartMilty extends MiltySubcommandData {
         BufferedImage mainImage = new BufferedImage(width, height, BufferedImage.TYPE_INT_ARGB);
         Graphics graphicsMain = mainImage.getGraphics();
 
-        Point equadistant = new Point(0, 150);
+        Point equidistant = new Point(0, 150);
         Point left = new Point(0, 450);
         Point farFront = new Point(260, 0);
         Point front = new Point(260, 300);
@@ -269,9 +166,9 @@ public class StartMilty extends MiltySubcommandData {
                 BufferedImage image = ImageIO.read(new File(leftSlice.getTile().getTilePath()));
                 graphics.drawImage(image, left.x, left.y, null);
 
-                MiltyDraftTile equadistantSlice = slice.getEquadistant();
-                image = ImageIO.read(new File(equadistantSlice.getTile().getTilePath()));
-                graphics.drawImage(image, equadistant.x, equadistant.y, null);
+                MiltyDraftTile equidistantSlice = slice.getEquidistant();
+                image = ImageIO.read(new File(equidistantSlice.getTile().getTilePath()));
+                graphics.drawImage(image, equidistant.x, equidistant.y, null);
 
                 MiltyDraftTile farFrontSlice = slice.getFarFront();
                 image = ImageIO.read(new File(farFrontSlice.getTile().getTilePath()));
@@ -295,16 +192,16 @@ public class StartMilty extends MiltySubcommandData {
                 graphics.drawString(slice.getName(), hs.x + 150, hs.y + 60);
 
                 graphics.setFont(Storage.getFont50());
-                int resources = leftSlice.getResources() + rightSlice.getResources() + equadistantSlice.getResources()
-                        + farFrontSlice.getResources() + frontSlice.getResources();
-                int influence = leftSlice.getInfluence() + rightSlice.getInfluence() + equadistantSlice.getInfluence()
-                        + farFrontSlice.getInfluence() + frontSlice.getInfluence();
+                int resources = leftSlice.getResources() + rightSlice.getResources() + equidistantSlice.getResources()
+                    + farFrontSlice.getResources() + frontSlice.getResources();
+                int influence = leftSlice.getInfluence() + rightSlice.getInfluence() + equidistantSlice.getInfluence()
+                    + farFrontSlice.getInfluence() + frontSlice.getInfluence();
                 double resourcesMilty = leftSlice.getMilty_resources() + rightSlice.getMilty_resources()
-                        + equadistantSlice.getMilty_resources() + farFrontSlice.getMilty_resources()
-                        + frontSlice.getMilty_resources();
+                    + equidistantSlice.getMilty_resources() + farFrontSlice.getMilty_resources()
+                    + frontSlice.getMilty_resources();
                 double influenceMilty = leftSlice.getMilty_influence() + rightSlice.getMilty_influence()
-                        + equadistantSlice.getMilty_influence() + farFrontSlice.getMilty_influence()
-                        + frontSlice.getMilty_influence();
+                    + equidistantSlice.getMilty_influence() + farFrontSlice.getMilty_influence()
+                    + frontSlice.getMilty_influence();
 
                 graphics.drawString(resources + "/" + influence, hs.x + 130, hs.y + 130);
                 graphics.drawString("(" + resourcesMilty + "/" + influenceMilty + ")", hs.x + 70, hs.y + 190);
@@ -337,7 +234,7 @@ public class StartMilty extends MiltySubcommandData {
         Game activeGame = getActiveGame();
         String absolutePath = file.getParent() + "/" + activeGame.getName() + "_slices.jpg";
         try (FileInputStream fileInputStream = new FileInputStream(file);
-                FileOutputStream fileOutputStream = new FileOutputStream(absolutePath)) {
+            FileOutputStream fileOutputStream = new FileOutputStream(absolutePath)) {
 
             BufferedImage image = ImageIO.read(fileInputStream);
             fileInputStream.close();
@@ -345,8 +242,7 @@ public class StartMilty extends MiltySubcommandData {
             BufferedImage convertedImage = new BufferedImage(width, height, BufferedImage.TYPE_INT_RGB);
             convertedImage.createGraphics().drawImage(image, 0, 0, Color.black, null);
 
-            boolean canWrite = ImageIO.write(convertedImage, "jpg", fileOutputStream);
-
+            ImageIO.write(convertedImage, "jpg", fileOutputStream);
         } catch (IOException e) {
             BotLogger.log("Could not save jpg file", e);
         }
@@ -370,7 +266,7 @@ public class StartMilty extends MiltySubcommandData {
             Collections.shuffle(blue);
             Collections.shuffle(red);
 
-            for (int j = 0; j < sliceCount; j++) {
+            for (int sliceNum = 1; sliceNum <= sliceCount; sliceNum++) {
 
                 MiltyDraftSlice miltyDraftSlice = new MiltyDraftSlice();
                 List<MiltyDraftTile> tiles = new ArrayList<>();
@@ -381,8 +277,7 @@ public class StartMilty extends MiltySubcommandData {
                 MiltyDraftTile red2 = red.remove(0);
                 tiles.add(red1);
                 tiles.add(red2);
-                boolean needToCheckAnomalies = red1.getTierList() == TierList.anomaly
-                        && red2.getTierList() == TierList.anomaly;
+                boolean needToCheckAnomalies = red1.getTierList() == TierList.anomaly && red2.getTierList() == TierList.anomaly;
                 Collections.shuffle(tiles);
 
                 if (!anomalies_can_touch && needToCheckAnomalies) {
@@ -404,14 +299,15 @@ public class StartMilty extends MiltySubcommandData {
                 miltyDraftSlice.setLeft(tiles.get(0));
                 miltyDraftSlice.setFront(tiles.get(1));
                 miltyDraftSlice.setRight(tiles.get(2));
-                miltyDraftSlice.setEquadistant(tiles.get(3));
+                miltyDraftSlice.setEquidistant(tiles.get(3));
                 miltyDraftSlice.setFarFront(tiles.get(4));
 
                 // CHECK IF SLICES ARE OK HERE -------------------------------
                 if (miltyDraftSlice.getOptimalTotalValue() < 8 || miltyDraftSlice.getOptimalTotalValue() > 14) {
                     break;
                 }
-                miltyDraftSlice.setName(Integer.toString(j));
+
+                miltyDraftSlice.setName(Integer.toString(sliceNum));
                 draftManager.addSlice(miltyDraftSlice);
             }
 
@@ -423,7 +319,7 @@ public class StartMilty extends MiltySubcommandData {
         return slicesCreated;
     }
 
-    public void initDraftTiles(MiltyDraftManager draftManager) {
+    public static void initDraftTiles(MiltyDraftManager draftManager) {
         Map<String, TileModel> allTiles = TileHelper.getAllTiles();
         for (TileModel tileModel : new ArrayList<>(allTiles.values())) {
             String tileID = tileModel.getId();
@@ -448,8 +344,7 @@ public class StartMilty extends MiltySubcommandData {
                 continue;
             }
 
-            if (tile.isHomeSystem() || tile.getRepresentation().contains("Hyperlane")
-                    || tile.getRepresentation().contains("Keleres")) {
+            if (tile.isHomeSystem() || tile.getRepresentation().contains("Hyperlane") || tile.getRepresentation().contains("Keleres")) {
                 continue;
             }
 
